fix secrets typo

--- a/.github/workflows/build-deploy-container.yml
+++ b/.github/workflows/build-deploy-container.yml
@@ -221,7 +221,8 @@ jobs:
     with:
       resource-group: ${{ inputs.container-app-resource-group }}
       container-app-name: ${{ inputs.container-app-name }}
-    secrets: ${{ secrets.azure-credentials }}
+    secrets:
+      azure-credentials: ${{ secrets.azure-credentials }}
 
   assign_app_configuration_access:
     name: Assign App Configuration access
@@ -229,7 +230,8 @@ jobs:
     uses: WintDev/actions/.github/workflows/assign-app-configuration-access.yml@alpha
     with:
       principal-id: ${{ needs.get_managed_id.outputs.principal_id }}
-    secrets: ${{ secrets.azure-credentials }}
+    secrets:
+      azure-credentials: ${{ secrets.azure-credentials }}
 
   assign_keyvault_access:
     name: Assign production service bus access
@@ -242,4 +244,5 @@ jobs:
       keyvault-production: ${{ inputs.keyvault-production }}
       keyvault-resourcegroup-staging: ${{ inputs.keyvault-resourcegroup-staging }}
       keyvault-staging: ${{ inputs.keyvault-staging }}
-    secrets: ${{ secrets.azure-credentials }}
+    secrets: 
+      azure-credentials: ${{ secrets.azure-credentials }}
