--- a/.github/workflows/get-managed-identity.yml
+++ b/.github/workflows/get-managed-identity.yml
@@ -33,6 +33,10 @@ jobs:
         with:
           creds: ${{ secrets.azure-credentials }}
 
+      - name: 'az config'
+        shell: bash
+        run: az config set extension.use_dynamic_install=yes_without_prompt
+
       - name: Ensure Managed Identity
         id: update_containerapp_identity
         run: |
