fix inputs typo

--- a/.github/workflows/build-deploy-container.yml
+++ b/.github/workflows/build-deploy-container.yml
@@ -226,7 +226,7 @@ jobs:
 
   assign_app_configuration_access:
     name: Assign App Configuration access
-    if: ${{ inputs.require-app-configuration-access }}
+    if: ${{ inputs.require-app-config-access }}
     uses: WintDev/actions/.github/workflows/assign-app-configuration-access.yml@alpha
     with:
       principal-id: ${{ needs.get_managed_id.outputs.principal_id }}
@@ -234,8 +234,8 @@ jobs:
       azure-credentials: ${{ secrets.azure-credentials }}
 
   assign_keyvault_access:
-    name: Assign production service bus access
-    if: ${{ inputs.require-app-configuration-access || inputs.require-keyvault-access }}
+    name: Assign key vault access
+    if: ${{ inputs.require-app-config-access || inputs.require-keyvault-access }}
     needs: get_managed_id
     uses: WintDev/actions/.github/workflows/assign-kv-access.yml@alpha
     with:
