--- a/.github/workflows/get-subscription-id.yml
+++ b/.github/workflows/get-subscription-id.yml
@@ -34,4 +34,4 @@ jobs:
         shell: bash
         run: |
           ID=$(az account show --subscription "${{ inputs.name }}" --query id -o tsv)
-          echo "id=$ID" >> $GITHUB_OUTPUT
+          echo "::set-output name=id::$ID"
