workaround Skip output since it may contain secret

--- a/.github/workflows/get-managed-identity.yml
+++ b/.github/workflows/get-managed-identity.yml
@@ -53,4 +53,4 @@ jobs:
           --name ${{ inputs.container-app-name }} \
           --query identity.principalId \
           --output tsv)
-          echo "::set-output name=principal_id::$principal_id"
+          echo "principal_id=$principal_id" >> $GITHUB_OUTPUT
