--- a/.github/workflows/assign-app-configuration-access.yml
+++ b/.github/workflows/assign-app-configuration-access.yml
@@ -12,9 +12,6 @@ on:
       azure-credentials:
         description: 'The credentials to use to authenticate against azure.'
         required: true
-      azure-subscription:
-        description: 'The id of the Azure Subscription.'
-        required: true
 
 jobs:
   assign_app_configuration_access:
@@ -32,4 +29,4 @@ jobs:
           az role assignment create \
           --assignee ${{ inputs.principal-id }} \
           --role "App Configuration Data Reader" \
-          --scope /subscriptions/${{ secrets.azure-subscription }}/resourceGroups/WintServicesCommon/providers/Microsoft.AppConfiguration/configurationStores/WintServicesAppConfiguration
+          --scope /subscriptions/274a26c3-e153-4564-b062-15c5e39cdfdb/resourceGroups/WintServicesCommon/providers/Microsoft.AppConfiguration/configurationStores/WintServicesAppConfiguration
