--- a/.github/workflows/assign-app-configuration-access.yml
+++ b/.github/workflows/assign-app-configuration-access.yml
@@ -27,6 +27,7 @@ jobs:
         shell: bash
         run: |
           az role assignment create \
-          --assignee ${{ inputs.principal-id }} \
+          --assignee-object-id ${{ inputs.principal-id }} \
+          --assignee-principal-type ServicePrincipal \
           --role "App Configuration Data Reader" \
           --scope /subscriptions/274a26c3-e153-4564-b062-15c5e39cdfdb/resourceGroups/WintServicesCommon/providers/Microsoft.AppConfiguration/configurationStores/WintServicesAppConfiguration
