use user-assigned managed identity w containerapps

--- a/.github/workflows/build-deploy-container.yml
+++ b/.github/workflows/build-deploy-container.yml
@@ -47,45 +47,6 @@ on:
         description: |
           'A list of environment variable(s) for the container. Space-separated values in 'key=value' format. Use an empty string to clear existing values. Prefix value with 'secretref:' to reference a secret.'
         required: false
-      
-      require-app-config-access:
-        type: boolean
-        description: |
-          'true if the container app requires access to app configuration; otherwise, false. The default value is true.'
-        required: false
-        default: true
-
-      require-keyvault-access:
-        type: boolean
-        description: |
-          'true if the container app requires key vault access; otherwise, false. The default value is true.'
-        required: false
-        default: true
-
-      keyvault-resourcegroup-staging:
-        type: string
-        description: |
-          'The name of the resource group where the key vault that will be used by the app deployed to production resides.'
-        required: false
-        default: 'WintVaultTest'
-      keyvault-staging:
-        type: string
-        description: |
-          'The name of the key vault that will be used by the app deployed to production.'
-        required: false
-        default: 'WintVaultTest'
-      keyvault-resourcegroup-production:
-        type: string
-        description: |
-          'The name of the resource group where the key vault that will be used by the app deployed to production resides.'
-        required: false
-        default: 'WintVaultLive'
-      keyvault-production:
-        type: string
-        description: |
-          'The name of the key vault that will be used by the app deployed to production.'
-        required: false
-        default: 'WintVaultLive'
 
     secrets:
       username:
@@ -161,9 +122,17 @@ jobs:
       tag: latest
     secrets: inherit
 
+  get_managed_id:
+    uses: WintDev/actions/.github/workflows/get-wint-service-identity.yml@alpha
+    name: Get the service identity
+    with:
+      enviroment: ${{ inputs.environment }}
+    secrets:
+      azure-credentials: ${{ secrets.azure-credentials }}
+
   deploy:
     name: Deploy azure container app
-    needs: push_container
+    needs: [push_container, get_managed_id]
     runs-on: ubuntu-latest
     env:
       CONTAINER_APP_ENV_VARS: 'ASPNETCORE_ENVIRONMENT=${{ inputs.environment }} DOTNET_ENVIRONMENT=${{ inputs.environment }}'
@@ -214,37 +183,11 @@ jobs:
           --location ${{ inputs.container-app-location }} \
           ${{ env.CA_GH_ACTION_CONTAINER_APP_ENVIRONMENT_VARIABLES_ARG }}
 
-  get_managed_id:
-    uses: WintDev/actions/.github/workflows/get-managed-identity.yml@alpha
-    needs: deploy
-    name: Get the managed identity
-    with:
-      resource-group: ${{ inputs.container-app-resource-group }}
-      container-app-name: ${{ inputs.container-app-name }}
-    secrets:
-      azure-credentials: ${{ secrets.azure-credentials }}
-
-  assign_app_configuration_access:
-    name: Assign App Configuration access
-    if: ${{ inputs.require-app-config-access }}
-    needs: get_managed_id
-    uses: WintDev/actions/.github/workflows/assign-app-configuration-access.yml@alpha
-    with:
-      principal-id: ${{ needs.get_managed_id.outputs.principal_id }}
-    secrets:
-      azure-credentials: ${{ secrets.azure-credentials }}
-
-  assign_keyvault_access:
-    name: Assign key vault access
-    if: ${{ inputs.require-app-config-access || inputs.require-keyvault-access }}
-    needs: get_managed_id
-    uses: WintDev/actions/.github/workflows/assign-kv-access.yml@alpha
-    with:
-      principal-id: ${{ needs.get_managed_id.outputs.principal_id }}
-      environment: ${{ inputs.environment }}
-      keyvault-resourcegroup-production: ${{ inputs.keyvault-resourcegroup-production }}
-      keyvault-production: ${{ inputs.keyvault-production }}
-      keyvault-resourcegroup-staging: ${{ inputs.keyvault-resourcegroup-staging }}
-      keyvault-staging: ${{ inputs.keyvault-staging }}
-    secrets: 
-      azure-credentials: ${{ secrets.azure-credentials }}
+      - name: 'Assign managed identity'
+        shell: bash
+        run: |
+          az containerapp identity assign \
+          --name ${{ inputs.container-app-name }} \
+          --resource-group ${{ inputs.container-app-resource-group }} \
+          --user-assigned \
+          ${{ needs.get_managed_id.outputs.resource_id }}
