reduce ouput from kv access step

--- a/.github/workflows/assign-kv-access.yml
+++ b/.github/workflows/assign-kv-access.yml
@@ -67,4 +67,5 @@ jobs:
           --name '${{ env.VAULT }}' \
           --resource-group '${{ env.VAULT_RG }}' \
           --object-id ${{ inputs.principal-id }} \
-          --secret-permissions get list
+          --secret-permissions get list \
+          --output tsv
