--- a/.github/workflows/get-wint-service-identity.yml
+++ b/.github/workflows/get-wint-service-identity.yml
@@ -21,6 +21,9 @@ on:
       principal_id:
         description: The principal ID of the user-assigned managed identity.
         value: ${{ jobs.get_managed_id.outputs.principal_id }}
+      client_id:
+        description: The client ID of the user-assigned managed identity.
+        value: ${{ jobs.get_managed_id.outputs.client_id }}
       name:
         description: The name of the user-assigned managed identity.
         value: ${{ jobs.get_managed_id.outputs.name }}
@@ -35,6 +38,7 @@ jobs:
       NAME: wint-service
       RESOURCE_GROUP: ${{ vars.AZURE_IDENTITY_RG }}
     outputs:
+      client_id: ${{ steps.get_client_id.outputs.client_id }}
       principal_id: ${{ steps.get_principal_id.outputs.principal_id }}
       name: ${{ steps.get_name.outputs.name }}
       rg: ${{ steps.get_rg.outputs.rg }}
@@ -75,6 +79,17 @@ jobs:
           --query principalId \
           --output tsv)
           echo "principal_id=$principal_id" >> $GITHUB_OUTPUT
+      
+      - name: Get Client ID of the Managed Identity
+        id: get_client_id
+        shell: bash
+        run: |
+          client_id=$(az identity show \
+          --name ${{ env.NAME }} \
+          --resource-group ${{ env.RESOURCE_GROUP }} \
+          --query clientId \
+          --output tsv)
+          echo "client_id=$client_id" >> $GITHUB_OUTPUT
 
       - name: Get managed identity name
         id:  get_name
