--- a/.github/workflows/build-deploy-container.yml
+++ b/.github/workflows/build-deploy-container.yml
@@ -141,7 +141,7 @@ jobs:
       - name: 'Add user assigned managed identity client id to environment variables'
         shell: bash
         run: |
-          CONTAINER_APP_ENV_VARS="${{ env.CONTAINER_APP_ENV_VARS }} ${{ WINT_IDENTITY_CLIENTID=needs.get_service_identity.outputs.client_id }}"
+          CONTAINER_APP_ENV_VARS="${{ env.CONTAINER_APP_ENV_VARS }} WINT_IDENTITY_CLIENTID=${{ needs.get_service_identity.outputs.client_id }}"
           echo "CONTAINER_APP_ENV_VARS=${CONTAINER_APP_ENV_VARS}" >> $GITHUB_ENV
           
       - name: 'Set production container app environment'
