--- a/.github/workflows/test-app-ubuntu.yml
+++ b/.github/workflows/test-app-ubuntu.yml
@@ -34,7 +34,8 @@ jobs:
         id: get_test_sources
         shell: bash
         run: |
-          if '${{ inputs.test-sources }}' != ''}}; then
+          if [['${{ inputs.test-sources }}' != ''}}]]
+          then
             echo "Using test-sources as test source"
             TEST_SOURCES=${{ inputs.test-sources }}
           else
