--- a/.github/workflows/test-app-ubuntu.yml
+++ b/.github/workflows/test-app-ubuntu.yml
@@ -14,6 +14,10 @@ on:
         required: false
         default: 'minimal'
         type: string
+      dotnet-version:
+        required: false
+        default: '6'
+        type: string
 
     secrets:
       nuget-read-pat:
@@ -44,11 +48,11 @@ jobs:
           fi
           echo "test_sources=$TEST_SOURCES" >> $GITHUB_OUTPUT
 
-      - name: Install dotnet 7
+      - name: Install dotnet
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: |
-            7.0.x
+            ${{ inputs.dotnet-version }}.0.x
 
       - name: Add GitHub Nuget registry
         run: dotnet nuget add source --username WintDev --password ${{ secrets.nuget-read-pat }} --store-password-in-clear-text --name WintDev "${{ env.WINT_GITHUB_NUGET_SOURCE_URL }}"
